--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,34 @@
 body {
     padding-top: 50px;
     max-width: 100%;
+    padding-left: 15%;
+    padding-right: 15%;
     overflow-x: hidden;
+    background-color: #F5FAFF;
+}
+
+.project-header{
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+
+.project-row{
+}
+
+.project-item{
+
+}
+
+.project-img{
+    max-width:100%;
+    max-height:auto;
+    padding-right:50px;
+}
+
+footer {
+    margin-top: 30px;
+    padding-top:8px;
+    padding-left: 20px;
+    background-color: #222;
+    color: #9d9d9d;
 }
