--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -61,6 +61,10 @@ footer {
     padding-bot: 40px;
 }
 
+.current-projects {
+    margin-bottom: 25px;
+}
+
 .projects-header{
 
 }
@@ -78,3 +82,5 @@ footer {
     *display:inline; /* ie7 fix */
     float: none; /* this is the part that makes it work */
 }
+
+h2.underline { padding-right:20px; border-bottom:1px solid #000; }
