--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4201,7 +4201,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 8px;
-  background-color: transparent;
+  background-nav-: transparent;
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -4237,7 +4237,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     float: none;
     width: auto;
     margin-top: 0;
-    background-color: transparent;
+    background-nav-: transparent;
     border: 0;
     -webkit-box-shadow: none;
             box-shadow: none;
