--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -1,39 +1,56 @@
 body {
     padding-top: 50px;
     max-width: 100%;
+    height:100%;
+    position:relative;
     overflow-x: hidden;
 }
 
-.image-header {
-    height: 300px;
-    padding-left:170px;
-    padding-right:170px;
-    width: 100%;
-    background-color: teal;
+html{
+    height:100%;
+    position:relative;
 }
+
+p {
+    font-family: "Arial", Helvetica, sans-serif;
+}
+
+p.spacing{
+    line-height: 27px;
+}
+
+.top-buffer { margin-top:5px; }
+
+.row.no-pad {
+  margin-right:5px;
+  margin-left:0;
+}
+.row.no-pad > [class*='col-'] {
+  padding-right:5px;
+  padding-left:0;
+}
+
 
 .profile-header{
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
-.profile-image{
-    height:230px;
-    width:230px;
-    min-width:230px;
-    min-height:230px;
+
+
+
+.main-image{
+    width: 60%;
+    margin: 14% auto;
 }
 
 .about-me{
-    color: #fff;
-    opacity: 0.93;
-    margin-left:70px;
+    color: #000;
 }
 
 .about-me-info{
-    color: #fff;
-    opacity: 0.93;
-    margin-left:70px;
+    color: #000;
+    margin: 50px 100px 50px 20px;
 }
 
 .img-center {
@@ -45,10 +62,15 @@ body {
 }
 
 footer {
+    position:absolute;
+    bottom:0px;
+    min-width:100%;
     padding-top:8px;
     padding-left: 20px;
-    background-color: #222;
-    color: #9d9d9d;
+    background-color: #f8f8f8;
+    border-color: #e7e7e7;
+    color: #333;
+    border: 1px;
 }
 
 .project-item {
