--- a/css/projects.css
+++ b/css/projects.css
@@ -1,8 +1,8 @@
 body {
     padding-top: 50px;
     max-width: 100%;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: 10%;
+    padding-right: 10%;
     overflow-x: hidden;
     background-color: #F5FAFF;
 }
@@ -13,6 +13,7 @@ body {
 }
 
 .project-row{
+
 }
 
 .project-item{
@@ -29,7 +30,9 @@ footer {
     margin-top: 30px;
     padding-top:8px;
     padding-left: 20px;
-    background-color: #222;
-    color: #9d9d9d;
+    background-color: #f8f8f8;
+    border-color: #e7e7e7;
+    color: #333;
+    border-top: 1px;
 }
 
