--- a/css/shared.css
+++ b/css/shared.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700');
+
 .navbar-nav > li > a, .navbar-brand {
     padding-top: 6px !important;
     padding-bottom:0 !important;
@@ -5,14 +7,60 @@
 }
 .navbar {min-height:32px !important;}
 
-
-.row-centered{
-	text-align:center;
-	display: table-cell;
-	vertical-align:middle;
+.background {
+  background-image: url("../images/penguin.jpg");
+  background-size: cover;
+  position:absolute;
+  height: 100%;
+  width: 100%;
+  opacity: 0.8;
+  /*filter: alpha(opacity=20);*/
 }
 
-.height-centered{
-	height: 100%;
-	display: table;
+.flex-container {
+  position: relative;
+  opacity: 0.95;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
+
+.container-for-container {
+	padding: 30px;
+	background-color: #f8eee7;
+	display: flex;
+	flex-direction: row;
+}
+
+.the-name{
+	text-align: center;
+	font-size: 3em;
+	font-family: 'Roboto Slab', serif;
+	font-weight:700;
+}
+
+.the-paragraph{
+	font-size: 1.2em;
+	font-family: 'Roboto Slab', serif;
+	font-weight:400;
+	max-width: 350px;
+	padding-bottom: 6px;
+}
+
+.mainpic{
+    width: 330px;
+    padding-right: 20px;
+    margin-right: 20px;
+}
+
+.flex-col-right {
+/*	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;*/
+}
+
