--- a/css/shared.css
+++ b/css/shared.css
@@ -56,11 +56,42 @@
     margin-right: 20px;
 }
 
-.flex-col-right {
-/*	height: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;*/
+.flex-container-me{
+  position: relative;
+  opacity: 0.98;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  padding-top:5%;
+  align-items: flex-start;
+  justify-content: center;
 }
 
+.container-for-me {
+	width: 90%;
+	padding: 30px;
+	background-color: #76323f;
+	display: flex;
+	flex-direction: column;
+}
+
+.section-header{
+	text-align: left;
+	font-size: 3em;
+	color: #ffffff;
+	font-family: 'Roboto Slab', serif;
+	font-weight:700;
+}
+
+.section-description{
+	text-align: left;
+	font-size: 1.7em;
+	color: #ffffff;
+	font-family: 'Roboto Slab', serif;
+	font-weight:400;
+}
+
+.album-section{
+	width: 100%;
+}
