--- a/css/shared.css
+++ b/css/shared.css
@@ -69,9 +69,8 @@
 }
 
 .container-for-me {
-	width: 90%;
-	padding: 30px;
-	background-color: #76323f;
+	width: 92%;
+	padding: 20px;
 	display: flex;
 	flex-direction: column;
 }
@@ -93,9 +92,26 @@
 	padding-bottom: 20px;
 }
 
+/* book stuff */
+
+.book-section{
+	margin-top: 10px;
+	padding: 2%;
+	background-color: #233237;
+	width: 100%;
+}
+
+.book-flex{
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+}
+
 
 /* Album stuff */
 .album-section{
+	background-color: #76323f;
+	padding: 2%;
 	width: 100%;
 }
 
