--- a/css/shared.css
+++ b/css/shared.css
@@ -1,268 +1,124 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700');
-
-.navbar-nav > li > a, .navbar-brand {
-    padding-top: 0px !important;
-    padding-bottom:0 !important;
-    line-height: 50px;
-    height: 50px;
-    font-family: 'Roboto Slab', serif;
-    font-size: 1.5em;
-    font-weight:400;
+body {
+    max-width: 100%;
+    height:100%;
+    position:relative;
+    overflow-x: hidden;
+    background: #d7ded7;
 }
 
-.navbar {min-height:50px !important;}
-
-.active-page{
-	background-color: #d9d9d9;
+html{
+    height:100%;
+    position:relative;
 }
 
-.background {
-  background-image: url("../images/penguin.jpg");
-  background-size: cover;
-  position:absolute;
-  height: 100%;
-  width: 100%;
-  opacity: 0.8;
-  /*filter: alpha(opacity=20);*/
+p {
+    font-family: "Arial", Helvetica, sans-serif;
 }
 
-.flex-container {
-  position: relative;
-  opacity: 0.92;
-  height: 100%;
-  width: 100%;
+p.spacing{
+    line-height: 27px;
+}
+
+.sidebar-usermenu {
+  margin-top: 30px;
+}
+
+.sidebar-usermenu ul li {
+  border-bottom: 1px solid #f0f4f7;
+}
+
+.sidebar-usermenu ul li:last-child {
+  border-bottom: none;
+}
+
+.sidebar-usermenu ul li a {
+  color: #93a3b5;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.sidebar-usermenu ul li a i {
+  margin-right: 8px;
+  font-size: 14px;
+}
+
+.sidebar-usermenu ul li a:hover {
+  background-color: #18121e;
+  color: #fff;
+}
+
+.sidebar-usermenu-item {
+  background-color: #233237;
+  color: #5b9bd1;
+  outline: 0.01em solid #93a3b5;
+}
+
+.sidebar-sidebar {
+  padding: 60px 0 10px 0;
+  background: #18121e;
+  height:100%;
+}
+
+.sidebar-img img {
+  float: none;
+  margin: 0 auto;
+  width: 70%;
+  height: 70%;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  border-radius: 50% !important;
+}
+
+.sidebar-name {
+  text-align: center;
+  margin-top: 20px;
+  color: #ffffff;
+  font-size: 30px;
+  font-weight: 400;
+  margin-bottom: 7px;
+}
+
+.page {
+  padding: 20px 0 0 40px;
+}
+
+.aboutme {
+  font-size: 16px;
+}
+
+.section-title{
+  text-align: center;
+}
+
+.section-experience{
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  align-items:center;
+  justify-content:center;
+   -webkit-flex-direction: column;
+   flex-direction: column;
+  width:100%;
 }
 
-.container-for-container {
-	padding-left:30px;
-	padding-right:30px;
-	padding-bottom:35px;
-	padding-top:35px;
-	background-color: #f8eee7;
-	display: flex;
-	flex-direction: row;
+.experience{
+  margin: 5px;
+  height: 80px;
+  width: 80%;
+  background-color: #233237;
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: row;
+   flex-direction: row;
+   -webkit-justify-content: flex-start;
+   justify-content: flex-start;
+  align-items:center;
 }
 
-.the-name{
-	text-align: center;
-	font-size: 3em;
-	font-family: 'Roboto Slab', serif;
-	font-weight:700;
+.experience-text{
+  color: #fff;
+  padding: 9px 0 0 0;
 }
 
-.the-paragraph{
-	font-size: 1.2em;
-	font-family: 'Roboto Slab', serif;
-	font-weight:400;
-	max-width: 350px;
-	padding-bottom: 6px;
-}
-
-.mainpic{
-    width: 400px;
-    padding-right: 20px;
-    margin-right: 20px;
-}
-
-.flex-container-me{
-  position: relative;
-  opacity: 0.98;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  padding-top:5%;
-  align-items: flex-start;
-  justify-content: center;
-}
-
-.container-for-me {
-	width: 92%;
-	padding: 20px;
-	display: flex;
-	flex-direction: column;
-}
-
-.section-header{
-	text-align: left;
-	font-size: 3em;
-	color: #ffffff;
-	font-family: 'Roboto Slab', serif;
-	font-weight:700;
-}
-
-/*.mad-lyriks{
-	padding-top: 40px;
-	display: flex;
-	flex-direction: column;
-}*/
-
-.lyric{
-	text-align: left;
-	font-size: 1.7em;
-	color: #ffffff;
-	font-family: 'Roboto Slab', serif;
-	font-weight:400;
-	padding-bottom: 20px;
-}
-
-.potato{
-	text-align: left;
-	font-size: 3em;
-	color: #ffffff;
-	font-family: 'Roboto Slab', serif;
-	font-weight:700;
-}
-
-
-.section-description{
-	text-align: left;
-	font-size: 1.7em;
-	color: #ffffff;
-	font-family: 'Roboto Slab', serif;
-	font-weight:400;
-	padding-bottom: 20px;
-}
-
-/* book stuff */
-
-.book-section{
-	margin-top: 10px;
-	padding: 2%;
-	background-color: #233237;
-	width: 100%;
-}
-
-.book-flex{
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-}
-
-
-/* Album stuff */
-
-.album {
-	position: relative;
-	height:200px;
-	width:200px;
-	display: table;
-	padding-right: 10px;
-}
-
-.album-name-and-artist{
-	display: flex;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	padding: 10%;
-	text-align: center;
-	font-family: 'Roboto Slab', serif;
-	font-size: large;
-	font-weight:400;
-	background: #233237;
-	color: #fff;
-	visibility: hidden;
-	opacity: 0;
-	height:200px;
-	width: 200px;
-	align-items: center;
-	justify-content: center;
-
-	transition: opacity .3s, visibility .3s;
-}
-
-.album-section{
-	background-color: #76323f;
-	padding: 2%;
-	width: 100%;
-}
-
-.album-flex{
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-}
-
-.album-img {
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.album:hover .album-name-and-artist{
-	visibility: visible;
-	opacity: 0.7;
-}
-
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
-
-/* Modal Content (Image) */
-.modal-content {
-    margin: auto;
-    display: block;
-    width: 50%;
-    max-width: 600px;
-}
-
-/* Add Animation - Zoom in the Modal */
-.modal-content, #caption { 
-    -webkit-animation-name: zoom;
-    -webkit-animation-duration: 0.6s;
-    animation-name: zoom;
-    animation-duration: 0.6s;
-}
-
-@-webkit-keyframes zoom {
-    from {-webkit-transform:scale(0)} 
-    to {-webkit-transform:scale(1)}
-}
-
-@keyframes zoom {
-    from {transform:scale(0)} 
-    to {transform:scale(1)}
-}
-
-/* The Close Button */
-.close {
-    position: absolute;
-    top: 50px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-    .modal-content {
-        width: 100%;
-    }
+.experience-img{
+  width: 80px;
+  padding: 16px 16px 16px 16px;
 }
