--- a/css/shared.css
+++ b/css/shared.css
@@ -55,13 +55,49 @@ p.spacing{
 }
 
 .sidebar-sidebar {
-  padding: 60px 0 0px 0;
+  padding: 60px 0 0 0;
   background: #1c2127;
   margin-bottom: 100px;
   height:100%;
-  float:left;
-  -webkit-box-shadow: 4px 0 5px 0px #888;
-          box-shadow: 4px 0 5px 0px #888;
+  -webkit-box-shadow: 4px 0 2px -1px #888;
+          box-shadow: 4px 0 2px -1px #888;
+  margin-left: -250px;
+  position: fixed;
+  overflow-y: 0;
+  z-index: 1000;
+  width: 250px;
+  transition: all 0.4s ease 0s;
+}
+
+.page-wrapper {
+  padding-left: 250px;
+  transition: all 0.4s ease 0s;
+}
+
+.page-content {
+  width: 100%;
+}
+
+@media (max-width:767px) {
+    .page-wrapper {
+      padding-left: 0;
+    }
+
+    .sidebar-sidebar {
+      left: 0;
+    }
+
+    .page-wrapper.active {
+      position: relative;
+      left: 250px;
+    }
+
+    .page-wrapper.active .sidebar-sidebar {
+      position:relative;
+      left: 250px;
+      width: 250px;
+      transition: all 0.4s ease 0s;
+    }
 }
 
 .sidebar-img img {
@@ -113,6 +149,7 @@ p.spacing{
   width:95%;
   padding: 20px;
   border-radius: 2px;
+  box-shadow: 0px 2px 2px -2px #2e4756;
 }
 
 .aboutme {
@@ -121,6 +158,9 @@ p.spacing{
 
 .section-title{
   text-align: center;
+  border-bottom: 1px solid #ccc;
+  width: 100%;
+  margin: 0 0 20px 0;
 }
 
 .section-experience{
@@ -147,17 +187,6 @@ p.spacing{
   box-shadow: 5px 5px 5px #fff;
 }
 
-.experience-text{
-  color: #fff;
-  font-size: 12px;
-  padding: 9px 0 0 0;
-}
-
-.experience-img{
-  width: 70px;
-  padding: 16px;
-}
-
 .sidebar-icons {
   padding: 15px 0 0 0;
   text-align: center;
@@ -166,4 +195,117 @@ p.spacing{
 .sidebar-icon{
   color: #fff;
   padding: 6px;
+}
+
+.half-panel{
+    display: flex;
+    align-items:center;
+    justify-content:center;
+   -webkit-flex-direction: column;
+   flex-direction: column;
+}
+
+.experience-panel{
+  background-color:#a1e02c;
+  width:100%;
+}
+
+.exp-title
+{
+  position: relative;
+  left: -10px;
+  top: 15px;
+  border-radius: 0px;
+  padding: 0;
+  color: white;
+  height: 20px;
+}
+
+.exp-title-logo {
+  height:100%;
+}
+
+.exp-logo {
+  height:100%;
+}
+
+.exp-title-title {
+  background: #3c7a89;
+  padding: 4px 6px 4px 6px;
+}
+
+.exp-title-dates {
+  background: #2e4756;
+  padding: 4px 6px 4px 6px;
+  box-shadow: -3px 0px 7px -3px #2e4756;
+  margin: -4px !important;
+}
+
+.exp-desc{
+  background-color: #eeeeee;
+  padding: 35px 20px 12px 40px;
+  box-shadow: 0px 3px 3px -3px #2e4756;
+  display:block;
+  width: 100%;
+}
+
+.exp{
+  width: 100%;
+}
+
+.contact{
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-justify-content: center;
+  justify-content: center;
+  align-items:center;
+  width: 100%;
+}
+
+.contact-single{
+  padding: 20px;
+}
+
+.contact-icon a i{
+  text-align: center;
+  color:#1c2127;
+  width:100%;
+  padding-bottom: 10px;
+}
+
+.contact-icon a i:hover{
+  text-align: center;
+  color:#1c2127;
+  opacity: 0.8;
+}
+
+.contact-field{
+  text-align:center;
+  width: 100%;
+  padding-left:10px;
+  font-weight:800;
+}
+
+.section-icon{
+  padding-right: 10px;
+}
+
+.section-title h2{
+  padding-top: 2px;
+}
+
+.teaching-uni{
+  padding-top:10px;
+  text-align:left;
+  width:100%;
+}
+
+.teaching-title{
+  position: relative;
+  border-radius: 0px; 
+  color: white;
+  height: 20px;
+  padding: 0px 0 30px 0;
 }
