--- a/css/shared.css
+++ b/css/shared.css
@@ -156,6 +156,11 @@ p.spacing{
   font-size: 16px;
 }
 
+.aboutme2 {
+  font-size:16px;
+  margin: 0 0 10px 15px;
+}
+
 .section-title{
   text-align: center;
   border-bottom: 1px solid #ccc;
