--- a/css/shared.css
+++ b/css/shared.css
@@ -1,22 +1,37 @@
 body {
-    max-width: 100%;
-    height:100%;
-    position:relative;
-    overflow-x: hidden;
-    background: #eef0eb;
+  max-width: 100%;
+  width: 100%;
+  height:100%;
+  overflow-x: hidden;
+  background: #eef0eb;
 }
 
 html{
-    height:100%;
-    position:relative;
+  height:100%;
+  position:relative;
 }
 
-p {
-    font-family: "Arial", Helvetica, sans-serif;
+.page-content {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items:flex-start;
+  justify-content:center;
+  -webkit-flex-direction: column;
+  flex-direction: column;
 }
 
-p.spacing{
-    line-height: 27px;
+.page-row1 {
+  height: 100vh;
+  width: 100%;
+  min-height:100%;
+}
+
+.page-row2 {
+  height: 100vh;
+  width: 100%;
+  min-height:100%;
+  background: #000000;
 }
 
 .page {
@@ -25,10 +40,9 @@ p.spacing{
   justify-content:center;
   -webkit-flex-direction: column;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  position: absolute;
-  }
+}
 
 .spacing {
   height:5%;
@@ -37,10 +51,10 @@ p.spacing{
 .spacing2 {
   height:2%;
 }
-
+/*
 .page-wrapper{
   transition: all 0.4s ease 0s;
-}
+}*/
 
 .panel{
   background-color: #fff;
@@ -51,8 +65,8 @@ p.spacing{
 }
 
 .title {
-font-family: 'Alegreya Sans SC', sans-serif;
-  color: #117041;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  color: #331e36;
   font-size: 36px;
   text-align: center;
 }
