--- a/css/shared.css
+++ b/css/shared.css
@@ -14,6 +14,7 @@ html{
 .page-content {
   height: 100%;
   width: 100%;
+  min-width: 100%;
   display: flex;
   align-items:flex-start;
   justify-content:center;
@@ -44,6 +45,43 @@ html{
   width: 100%;
 }
 
+.about-page {
+  border-style: solid;
+  border-width: 1px 0px 1px 0px;
+  border-color: #fff;
+  height: 60vh;
+  width: 100vw;
+}
+
+.about-page-left {
+  background-color: #331e36;
+  height:100%;
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  padding: 1%
+}
+
+.about-page-right {
+  background-color: #cdd5d1;
+  height: 100%;
+  padding: 2%;
+  font-size:18px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.about-spacing-left {
+  height: 10%;
+}
+
+.about-text-left {
+  font-size:45px;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  color: #fff;
+}
+
 .spacing {
   height:5%;
 }
@@ -51,10 +89,6 @@ html{
 .spacing2 {
   height:2%;
 }
-/*
-.page-wrapper{
-  transition: all 0.4s ease 0s;
-}*/
 
 .panel{
   background-color: #fff;
@@ -83,19 +117,24 @@ html{
   width: 35%;
 }
 
-.aboutme {
-  font-size: 16px;
+.selfpic {
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  border-radius: 1% !important;
+  width: 35%;
+  border: 1px solid #fff;
 }
 
 .links {
-font-family: 'Alegreya Sans SC', sans-serif;
+  font-family: 'Alegreya Sans SC', sans-serif;
   color: #153243;
   font-size: 26px;
   text-align: center;
 }
 
-
 .sidebar-icon{
   color: #331e36;
   padding: 6px;
 }
+
+
