--- a/css/shared.css
+++ b/css/shared.css
@@ -9,6 +9,7 @@ body {
 html{
   height:100%;
   position:relative;
+  scroll-behavior: smooth;
 }
 
 .page-content {
@@ -43,6 +44,10 @@ html{
   flex-direction: column;
   height: 100vh;
   width: 100%;
+}
+
+.internal-link {
+  color: inherit;
 }
 
 .about-page {
@@ -242,6 +247,17 @@ html{
   font-size: 26px;
   text-align: center;
 }
+
+.links2 {
+  font-size:16px;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  color:#fff;
+  padding: 10px 0 0 0;
+}
+
+/*.flex-end {
+  align-self: flex-end;
+}*/
 
 .sidebar-icon{
   color: #331e36;
