--- a/css/shared.css
+++ b/css/shared.css
@@ -51,8 +51,8 @@ html{
 
 .about-page {
   border-style: solid;
-  border-width: 1px 0px 1px 0px;
-  border-color: #fff;
+  border-width: 1px 0px 0px 0px;
+  border-color: #ccc;
   /*height: 60vh;*/
   width: 100vw;
 }
@@ -91,8 +91,8 @@ html{
 
 .work-history {
   border-style: solid;
-  border-width: 1px 0px 1px 0px;
-  border-color: #fff;
+  border-width: 0px 0px 0px 0px;
+  border-color: #ccc;
   /*height: 120vh;*/
   width: 100vw;
 }
