--- a/css/shared.css
+++ b/css/shared.css
@@ -113,7 +113,7 @@ html{
 }
 
 .work-page-left {
-  background-color: #b6c4bd;
+  background-color: #47687f;
   height:100%;
   display: flex;
   align-items: center;
@@ -124,7 +124,7 @@ html{
 }
 
 .work-page-right {
-  background-color: #473e39;
+  background-color: #ad9e8a;
   height: 100%;
   padding: 2%;
 }
