--- a/css/shared.css
+++ b/css/shared.css
@@ -113,7 +113,7 @@ html{
 }
 
 .work-page-left {
-  background-color: #c4ba9f;
+  background-color: #a5b8ba;
   height:100%;
   display: flex;
   align-items: center;
